--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -74,6 +74,7 @@ html {
 }
 
 .image-frame{
+    position: relative;;
     width: 400px;
     height: 400px;
     border: 4px red solid;
@@ -86,4 +87,27 @@ html {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.superimposed-text{
+    z-index: 2;
+    font-size: 1.2rem;
+    color: yellow;
+    background-color: hsla(0, 1%, 30%,0.7);
+    position: absolute;
+    bottom:0.5rem;
+    left: 50%;
+    transform:translateX(-50%);
+}
+
+#api-key, #search-phrase{
+    border:1px gray solid;
+}
+
+#api-key:focus, #search-phrase:focus{
+    border:1px green solid;
+}
+
+#api-key:invalid, #search-phrase:invalid{
+    border:1px red solid;
 }
