--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,12 +48,14 @@ html {
     display: block;
 }
 
+.hidden{
+    opacity: 1;
+}
 .random-facts-frame{
     background-color: lightslategray;
     border-radius: 25px;
-    width: 500PX;
+    width: 600PX;
     margin-inline: auto;
-    display: none;
 }
 
 .fact-heading{
@@ -68,23 +70,25 @@ html {
     font-style: italic;
     font-weight: bold;
     color: whitesmoke;
-    padding-block-end: 1rem;
+    padding-block-end: 1em;
+    font-size: 0.8em;
 }
 
 .image-frame{
     position: relative;;
-    width: 400px;
-    height: 400px;
-    border: 4px red solid;
+    width: 500px;
+    height: 500px;
     margin-inline: auto;
     margin-block-end:1rem;
     border-radius: 25px;
     overflow: hidden;
+    border: 8px burlywood solid;
 }
 .image-frame > img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
 }
 
 .superimposed-text{
@@ -97,6 +101,8 @@ html {
     bottom:0.5rem;
     left: 50%;
     transform:translateX(-50%);
+    user-select: none;
+        white-space: pre-line;
 }
 
 #api-key, #search-phrase{
@@ -110,3 +116,4 @@ html {
 #api-key:invalid, #search-phrase:invalid{
     border:1px red solid;
 }
+
